[NGOCMINH] [UPDATE]: Update Get Admission Score